--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
                         <div class="card">
                             <ion-icon name="checkmark-outline"></ion-icon>
-                            <p>Terá saque da comissão em 14 dias </p>
+                            <p>Terá saque da comissão em 21 dias </p>
                         </div>
                     </div>
 
-                    <a  data-aos="fade-up" href="#cadastro"><button class="button">ME TORNAR PARCEIRO <img src="./assets/zero07 logo branco.webp" alt=""></button></a>
+                    <a  data-aos="fade-up" href="#cadastro"><button class="button">QUERO SER PARCEIRO <img src="./assets/zero07 logo branco.webp" alt=""></button></a>
 
                     <div data-aos="fade-up" class="cards mobile">
                         <div class="card">
@@ -83,7 +83,7 @@
                 <img class="graficos" src="./assets/graficos.webp" alt="">
                 <img class="icon" src="./assets/07 logo.webp" alt="">
                 <img class="bg" src="./assets/bg zero7 parceiros.webp" alt="">
-                <img  data-aos="fade-up-right" class="desktop" src="./assets/fotofabricio.webp" alt="">
+                <img  data-aos="fade-up-right" class="desktop" src="./assets/IMG ATT FABRICIO.png" alt="">
                 <img class="mobile" src="./assets/fotofabricio.webp" alt=""> 
         </div>
         <div class="light"></div>
