--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <img class="graficos" src="./assets/graficos.webp" alt="">
                 <img class="icon" src="./assets/07 logo.webp" alt="">
                 <img class="bg" src="./assets/bg zero7 parceiros.webp" alt="">
-                <img  data-aos="fade-up-right" class="desktop" src="./assets/IMG ATT FABRICIO.png" alt="">
-                <img class="mobile" src="./assets/fotofabricio.webp" alt=""> 
+                <img  data-aos="fade-up-right" class="desktop" src="./assets/IMG ATT FABRICIO.webp" alt="">
+                <img class="mobile" src="./assets/IMG ATT FABRICIO.webp" alt=""> 
         </div>
         <div class="light"></div>
         <div class="light dois"></div>
